--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -1,3 +1,7 @@
+// ==============================
+// Custom style
+// 自定义样式
+// ==============================
 .single div#comments {
     padding: 3rem 0 0;
 }
